GLSL object space normal maps have wrong shading #27536

Closed
opened 2011-05-31 18:43:14 +02:00 by Göran Maconi · 10 comments

%%%While object space normal maps work perfectly in blender internal, the GLSL preview renders them wrong. The bug is probably caused by an incorrect coordinate space transformation, resulting in lighting that changes depending on the view angle. This problem has been present ever since glsl viewport rendering was implemented in 2.4x and is still present.
The problem appears on any graphics card I have tested (geforce 8600 gt, gtx 260, gtx 460, gt 320, radeon hd 4770, hd 4870) so it's obviously not driver-related.

World space normal maps also have exactly the same problem.

Attached a simple example scene.%%%

%%%While object space normal maps work perfectly in blender internal, the GLSL preview renders them wrong. The bug is probably caused by an incorrect coordinate space transformation, resulting in lighting that changes depending on the view angle. This problem has been present ever since glsl viewport rendering was implemented in 2.4x and is still present. The problem appears on any graphics card I have tested (geforce 8600 gt, gtx 260, gtx 460, gt 320, radeon hd 4770, hd 4870) so it's obviously not driver-related. World space normal maps also have exactly the same problem. Attached a simple example scene.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%This accidentally went into the wrong tracker, I think...
Trying to repost it in the right place%%%

%%%This accidentally went into the wrong tracker, I think... Trying to repost it in the right place%%%
Member

%%%Moved from Blender 2.4x Bug Tracker to Blender 2.6 Bug Tracker%%%

%%%Moved from Blender 2.4x Bug Tracker to Blender 2.6 Bug Tracker%%%
Member

%%%Moving to the 2.6 tracker since I confirmed that this behavior is likely still present.%%%

%%%Moving to the 2.6 tracker since I confirmed that this behavior is likely still present.%%%
Member

%%%I am looking into this bug%%%

%%%I am looking into this bug%%%
Member

%%%Hi Brecht,

I fixed this issue, could you take a quick look at the attached patch before I commit?

Thanks,
Andrea%%%

%%%Hi Brecht, I fixed this issue, could you take a quick look at the attached patch before I commit? Thanks, Andrea%%%
Member

%%%To reproduce the bug, open the attached .blend from Göran and put the 3D view into GLSL shading mode, you will see that the faces are not correctly lit according to the light direction.%%%

%%%To reproduce the bug, open the attached .blend from Göran and put the 3D view into GLSL shading mode, you will see that the faces are not correctly lit according to the light direction.%%%

%%%Patch looks good to me, you can commit it, thanks.%%%

%%%Patch looks good to me, you can commit it, thanks.%%%
Member

%%%Fixed and committed, rev. 60261, thanks Brecht for reviewing%%%

%%%Fixed and committed, rev. 60261, thanks Brecht for reviewing%%%
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#27536
No description provided.