FIX: [#27536] GLSL object space normal maps have wrong shading

Added object and world space for normal map in GLSL view.